compiler/tests/en/errors/op_mismatch.salam
// EXPECT: E021
func main:
    x := true + false
    println x
end
